onclick added in html

--- a/typing.html
+++ b/typing.html
@@ -9,8 +9,8 @@
         <div class="typespeed">
             <textarea cols="50" id="type" name="typing" placeholder="start typing here! Once you are done, press submit!" rows="10"></textarea>
         </div>
-        <button class="submitbt" type="submit">Sumbit</button>
-        <button class="resetbt" type="reset">Reset</button>
+        <button class="submitbt" type="submit" onclick="final()">Sumbit</button>
+        <button class="resetbt" type="reset" onclick="TotalReset()">Reset</button>
         <div class="speed"></div>
         <div class="totalwords"></div>
         <div class="final"></div>
