--- a/typing.html
+++ b/typing.html
@@ -29,7 +29,7 @@
       </div> -->
             <footer>
                 designed by :
-                <a href="www.chalisebibek.com.np">BiBek Chalise</a>
+                <a href="https://www.chalisebibek.com.np">BiBek Chalise</a>
             </footer>
         </section>
     </body>
